style: made changes to the units used

--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
             <div class="grid-items addition"></div>
         </div>
     </div>
-    <footer></footer>
+    <footer>Footer</footer>
 </body>
 </html>
