style: made layout for diff buttons in calculator

--- a/index.html
+++ b/index.html
@@ -11,25 +11,25 @@
     <header>Simple Calculator</header>
     <div class="main">
         <div class="container">
-            <div class="grid-items wrkng-area"></div>
-            <div class="grid-items clear"></div>
-            <div class="grid-items delete"></div>
-            <div class="grid-items seven"></div>
-            <div class="grid-items eight"></div>
-            <div class="grid-items nine"></div>
-            <div class="grid-items division"></div>
-            <div class="grid-items four"></div>
-            <div class="grid-items five"></div>
-            <div class="grid-items six"></div>
-            <div class="grid-items multiply"></div>
-            <div class="grid-items one"></div>
-            <div class="grid-items two"></div>
-            <div class="grid-items three"></div>
-            <div class="grid-items subtract"></div>
-            <div class="grid-items point"></div>
-            <div class="grid-items zero"></div>
-            <div class="grid-items equals"></div>
-            <div class="grid-items addition"></div>
+            <div class="grid-items wrkng-area">Working area</div>
+            <div class="grid-items clear">CLEAR</div>
+            <div class="grid-items delete">DELETE</div>
+            <div class="grid-items seven">7</div>
+            <div class="grid-items eight">8</div>
+            <div class="grid-items nine">9</div>
+            <div class="grid-items division">/</div>
+            <div class="grid-items four">4</div>
+            <div class="grid-items five">5</div>
+            <div class="grid-items six">6</div>
+            <div class="grid-items multiply">*</div>
+            <div class="grid-items one">1</div>
+            <div class="grid-items two">2</div>
+            <div class="grid-items three">3</div>
+            <div class="grid-items subtract">-</div>
+            <div class="grid-items point">.</div>
+            <div class="grid-items zero">0</div>
+            <div class="grid-items equals">=</div>
+            <div class="grid-items addition">+</div>
         </div>
     </div>
     <footer>Footer</footer>
