style: added p in grid__items tags for layout

--- a/index.html
+++ b/index.html
@@ -11,25 +11,24 @@
     <header>Simple Calculator</header>
     <div class="main">
         <div class="container">
-            <div class="grid-items wrkng-area">Working area</div>
-            <div class="grid-items clear">CLEAR</div>
-            <div class="grid-items delete">DELETE</div>
-            <div class="grid-items seven">7</div>
-            <div class="grid-items eight">8</div>
-            <div class="grid-items nine">9</div>
-            <div class="grid-items division">/</div>
-            <div class="grid-items four">4</div>
-            <div class="grid-items five">5</div>
-            <div class="grid-items six">6</div>
-            <div class="grid-items multiply">*</div>
-            <div class="grid-items one">1</div>
-            <div class="grid-items two">2</div>
-            <div class="grid-items three">3</div>
-            <div class="grid-items subtract">-</div>
-            <div class="grid-items point">.</div>
-            <div class="grid-items zero">0</div>
-            <div class="grid-items equals">=</div>
-            <div class="grid-items addition">+</div>
+            <div class="grid__items wrkng--area"></div>
+            <div class="grid__items clear"><p>CLEAR</p></div>
+            <div class="grid__items delete"><p>DELETE</p></div>
+            <div class="grid__items seven"><p>7</p></div>
+            <div class="grid__items eight"><p>8</p></div>
+            <div class="grid__items nine"><p>9</p></div>
+            <div class="grid__items division"><p>/</p></div>
+            <div class="grid__items four"><p>4</p></div>
+            <div class="grid__items five"><p>5</p></div>
+            <div class="grid__items six"><p>6</p></div>
+            <div class="grid__items multiply"><p>*</p></div>
+            <div class="grid__items one"><p>1</p></div>
+            <div class="grid__items two"><p>2</p></div>
+            <div class="grid__items three"><p>3</p></div>
+            <div class="grid__items subtract"><p>-</p></div>
+            <div class="grid__items zero"><p>0</p></div>
+            <div class="grid__items equals"><p>=</p></div>
+            <div class="grid__items addition"><p>+</p></div>
         </div>
     </div>
     <footer>Footer</footer>
