--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <div class="grid__items wrkng--area"></div>
             <div class="grid__items clear"><p>CLEAR</p></div>
             <div class="grid__items delete"><p>DELETE</p></div>
+            <div class="grid__items point"><p>.</p></div>
             <div class="grid__items seven"><p>7</p></div>
             <div class="grid__items eight"><p>8</p></div>
             <div class="grid__items nine"><p>9</p></div>
