feat: add divs for functionality in (.wrkng--area)

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     <header>Simple Calculator</header>
     <div class="main">
         <div class="container">
-            <div class="grid__items wrkng--area"></div>
+            <div class="grid__items wrkng--area">
+                <div class="wrkng--area__display-one"></div>
+                <div class="wrkng--area__display-two"></div>
+            </div>
             <div class="grid__items clear"><p>CLEAR</p></div>
             <div class="grid__items delete"><p>DELETE</p></div>
             <div class="grid__items point"><p>.</p></div>
