--- a/index.html
+++ b/index.html
@@ -16,24 +16,24 @@
                 <div class="wrkng--area__display-one"></div>
                 <div class="wrkng--area__display-two"></div>
             </div>
-            <div class="grid__items clear"><p>CLEAR</p></div>
-            <div class="grid__items delete"><p>DELETE</p></div>
-            <div class="grid__items point"><p>.</p></div>
-            <div class="grid__items seven"><p>7</p></div>
-            <div class="grid__items eight"><p>8</p></div>
-            <div class="grid__items nine"><p>9</p></div>
-            <div class="grid__items division"><p>/</p></div>
-            <div class="grid__items four"><p>4</p></div>
-            <div class="grid__items five"><p>5</p></div>
-            <div class="grid__items six"><p>6</p></div>
-            <div class="grid__items multiply"><p>*</p></div>
-            <div class="grid__items one"><p>1</p></div>
-            <div class="grid__items two"><p>2</p></div>
-            <div class="grid__items three"><p>3</p></div>
-            <div class="grid__items subtract"><p>-</p></div>
-            <div class="grid__items zero"><p>0</p></div>
-            <div class="grid__items equals"><p>=</p></div>
-            <div class="grid__items addition"><p>+</p></div>
+            <div class="grid__items clear">CLEAR</div>
+            <div class="grid__items delete">DELETE</div>
+            <div class="grid__items point">.</div>
+            <div class="grid__items seven">7</div>
+            <div class="grid__items eight">8</div>
+            <div class="grid__items nine">9</div>
+            <div class="grid__items division">/</div>
+            <div class="grid__items four">4</div>
+            <div class="grid__items five">5</div>
+            <div class="grid__items six">6</div>
+            <div class="grid__items multiply">*</div>
+            <div class="grid__items one">1</div>
+            <div class="grid__items two">2</div>
+            <div class="grid__items three">3</div>
+            <div class="grid__items subtract">-</div>
+            <div class="grid__items zero">0</div>
+            <div class="grid__items equals">=</div>
+            <div class="grid__items addition">+</div>
         </div>
     </div>
     <footer>Footer</footer>
