fix: put in a multiplication sign

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="grid__items four">4</div>
             <div class="grid__items five">5</div>
             <div class="grid__items six">6</div>
-            <div class="grid__items multiply">*</div>
+            <div class="grid__items multiply">&times;</div>
             <div class="grid__items one">1</div>
             <div class="grid__items two">2</div>
             <div class="grid__items three">3</div>
