fix: changed buttons and style of the buttons

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
                 <div class="wrkng--area__display-one"></div>
                 <div class="wrkng--area__display-two"></div>
             </div>
-            <div class="grid__items clear">CLEAR</div>
-            <div class="grid__items delete">DELETE</div>
+            <div class="grid__items clear">C</div>
+            <div class="grid__items delete">&larr;</div>
             <div class="grid__items point">.</div>
             <div class="grid__items seven">7</div>
             <div class="grid__items eight">8</div>
             <div class="grid__items nine">9</div>
-            <div class="grid__items division">/</div>
+            <div class="grid__items division">&divide;</div>
             <div class="grid__items four">4</div>
             <div class="grid__items five">5</div>
             <div class="grid__items six">6</div>
